--- a/src/app/current-weather/current-weather.component.html
+++ b/src/app/current-weather/current-weather.component.html
@@ -1,30 +1,43 @@
 <div *ngIf="current.city">
   <div class="wrap-current">
     <div class="velo-current">
-      <div class="text-center">
+      <div class="text-center city">
         {{ current.city.name }}
       </div>
 
-      <div class="text-center">
-        {{ current.list[0].dt*1000 | date }}
+      <div class="text-center date">
+        {{ current.list[0].dt*1000 | date: 'EEEE, MMMM d, h:mm' }}
       </div>
 
-      <div class="row">
-        <div class="col temp">
-          {{ current.list[0].main.temp }}
+      <div class="row no-gutters py-2">
+        <div class="col temp"><span *ngIf="current.list[0].temp.day > 0">+</span>{{
+          formatTemp(current.list[0].temp.day) }}<span>°</span>
         </div>
+
         <div class="icon">
-          <img [src]="linkIcon()" alt="">
+          <img [src]="linkIcon()" alt="weather icon">
         </div>
-        <div class="col features">
-          <p><i class="fas fa-thermometer-three-quarters"></i> {{ current.list[0].main.pressure }} mm hg</p>
-          <p><i class="far fa-circle"></i> {{ current.list[0].main.humidity }} % humidiy</p>
-          <p><i class="fas fa-wind"></i> {{ current.list[0].wind.speed }}m/s {{ current.list[0].wind.deg }} </p>
+
+        <div class="col features align-self-center">
+          <div class="row no-gutters">
+            <div class="col-2"><i class="fas fa-thermometer-three-quarters fa-fw"></i></div>
+            <div class="col font-features">{{ current.list[0].pressure }} mm hg</div>
+          </div>
+
+          <div class="row no-gutters">
+            <div class="col-2"><i class="far fa-circle fa-fw"></i></div>
+            <div class="col font-features">{{ current.list[0].humidity }} % humidity</div>
+          </div>
+
+          <div class="row no-gutters">
+            <div class="col-2"><i class="fas fa-wind fa-fw"></i></div>
+            <div class="col font-features">{{ current.list[0].speed }}m/s {{ current.list[0].deg }}</div>
+          </div>
         </div>
       </div>
 
       <div class="text-center">
-        {{ current.list[0].weather[0].description }}
+        <span class="curr-desc">{{ current.list[0].weather[0].description }}</span>
       </div>
     </div>
   </div>
