--- a/src/app/citysearch/citysearch.component.css
+++ b/src/app/citysearch/citysearch.component.css
@@ -1,4 +1,9 @@
 input {
-  padding: 2px 10px;
-  border-radius: 15px;
+  padding: 1px 10px 3px;
+  border-radius: 6px;
+  background: transparent;
+  color: white;
+  line-height: 1.1;
+  border: 1px solid white;
+  font-size: 0.7rem;
 }
