--- a/src/app/current-weather/current-weather.component.css
+++ b/src/app/current-weather/current-weather.component.css
@@ -7,21 +7,37 @@
 .velo-current {
   height: 100%;
   background: rgba(0, 0, 0, 0.75);
+  padding: 15px 0;
+}
+
+.city {
+  font-size: 1.5rem;
+}
+
+.date {
+  font-size: .8rem;
 }
 
 .temp {
   text-align: right;
-  font-size: 40px;
+  font-size: 56px;
 }
 
 .icon {
-  zoom: 175%;
+  zoom: 220%;
 }
 
 .features {
   text-align: left;
 }
 
-.features p {
-  margin: 0;
+.font-features {
+  font-size: .8rem;
+  color: grey;
+}
+
+.curr-desc {
+  padding: 4px 8px;
+  background: rgba(68, 67, 67, 0.58);
+  font-size: .8rem;
 }
