--- a/src/app/forecast-weather/forecast-weather.component.css
+++ b/src/app/forecast-weather/forecast-weather.component.css
@@ -1,3 +1,40 @@
 .day {
   background: rgba(255, 255, 255, 0.5);
+  font-size: 12px;
+  color: white;
+  padding: 10px 2px;
+}
+
+.day div img {
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.3);
+  zoom: 70%;
+}
+
+.clouds {
+  border-top: 2px solid lightblue;
+}
+
+.clear {
+  border-top: 2px solid yellow;
+}
+
+.atmosphere {
+  border-top: 2px solid brown;
+}
+
+.snow {
+  border-top: 2px solid white;
+}
+
+.rain {
+  border-top: 2px solid blue;
+}
+
+.drizzle {
+  border-top: 2px solid lightcoral;
+}
+
+.thunderstorm {
+  border-top: 2px solid darkorchid;
 }
