--- a/src/app/forecast-weather/forecast-weather.component.html
+++ b/src/app/forecast-weather/forecast-weather.component.html
@@ -1,10 +1,10 @@
 <div>
   <div class="row no-gutters text-center">
     <div class="col" *ngFor="let day of forecast">
-      <div class="day">
-        <div> {{ day.dt*1000 | date }} </div>
-        <div><img [src]="linkIcon(day)"></div>
-        <div> {{ day.main.temp }} </div>
+      <div [ngClass]="'day ' + day.weather[0].main.toLowerCase()">
+        <div class="mb-2"> {{ day.dt*1000 | date: 'EEEE' | lowercase }} </div>
+        <div class="mb-2"><img [src]="linkIcon(day)"></div>
+        <div><span *ngIf="day.temp.day > 0">+</span>{{ dayTemp(day.temp.day) }}°</div>
       </div>
     </div>
   </div>
