--- a/src/app/current-weather/current-weather.component.html
+++ b/src/app/current-weather/current-weather.component.html
@@ -7,6 +7,7 @@
 
       <div class="text-center date">
         {{ current.list[0].dt*1000 | date: 'EEEE, MMMM d, h:mm' }}
+        <!-- {{ calcTimeFromLong(current.city?.coord.lon) | date: 'h:mm' }} -->
       </div>
 
       <div class="row no-gutters py-2">
@@ -15,13 +16,13 @@
         </div>
 
         <div class="icon">
-          <img [src]="linkIcon()" alt="weather icon">
+          <img [src]="'../../assets/images/weather/' + current.list[0].weather[0].icon + '.png'" alt="weather icon">
         </div>
 
         <div class="col features align-self-center">
           <div class="row no-gutters">
             <div class="col-2"><i class="fas fa-thermometer-three-quarters fa-fw"></i></div>
-            <div class="col font-features">{{ current.list[0].pressure }} mm hg</div>
+            <div class="col font-features">{{ parseHpaToMmhg(current.list[0].pressure) }} mm hg</div>
           </div>
 
           <div class="row no-gutters">
@@ -31,7 +32,7 @@
 
           <div class="row no-gutters">
             <div class="col-2"><i class="fas fa-wind fa-fw"></i></div>
-            <div class="col font-features">{{ current.list[0].speed }}m/s {{ current.list[0].deg }}</div>
+            <div class="col font-features">{{ current.list[0].speed }}m/s {{ parseWind(current.list[0].deg) }}</div>
           </div>
         </div>
       </div>
